# TheExportExpress

./: .env.example  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_ROADMAP.md  ExportExpressPro_Development_Guide_Part1.txt  ExportExpressPro_Development_Guide_Part2.txt  ExportExpressPro_Development_Guide_Part3.txt  ExportExpressPro_Development_Guide_Part4.txt  ExportExpressPro_Development_Guide_Part5.txt  LICENSE  PHASE2_IMPLEMENTATION.md  PROJECT_SUMMARY.md  README.md  README_Phase3.md  SECURITY.md  TRADE_ANALYTICS_IMPLEMENTATION_SUMMARY.md  changelog by COO AV.md  clear_auth_cache.html  docker-compose.yml  exportManagementSoftware.txt  fresh_startup.txt  init-mongo.js  predictionModel.txt  start-all.ps1  start_up.txt  verify-structure.ps1
TheExportExpress-main/: INTERCONNECTED_SYSTEM_OVERVIEW.md  README.md  package-lock.json  package.json
TheExportExpress-main/backend/: .env.example  package-lock.json  package.json  (+2 more)
ai-engine/: Dockerfile  requirements.txt
config/: default.toml  development.toml  production.toml
desktop-app/: create-basic-icon.js  create-icon.js  create-proper-png.js  create-rgba-png.js  create-simple-icon.js  create-valid-png.js  fix-icons.js  index.html  package-lock.json  package.json  vite.config.ts
desktop-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: api.rs  database.rs  document_generator.rs  export_manager.rs  integrations.rs  lib.rs  main.rs
website-integration/: package-lock.json  package.json
(+303 files in other folders)
